- add readme - minor changes on filius.ini

--- a/src/main/resources/config/filius.ini
+++ b/src/main/resources/config/filius.ini
@@ -26,14 +26,14 @@
 # posix-behaviour=1
 
 # Use the old message dialog to observe data exchange
-old-exchange-dialog=0
+# old-exchange-dialog=0
 
 # How the desktop windows in action mode are organized on the screen.
 # - The next window is added to the right of the previously opened window (arranged row by row): mode "row"
 # - The next window is added below the previously opened window (arranged column by column): mode "column"
 # - The next window overlaps the previously opened window (default): mode "stack"
 # row: 0, column: 1, stack: 2
-desktop-mode=1
+# desktop-mode=1
 
 # The software wizard is used for developing own applications within a Filius development environment.
 # The necessary prerequisite for programming and compiling your own applications is that Filius is
@@ -47,5 +47,6 @@ desktop-mode=1
 
 # The working area to design the computer network is of limited size.
 # The attributes pane-width and pane-height are used to increase or decrease the available working area.
-pane-width=2000
-pane-height=1500
+# Default is (width x height): 2000 x 1500
+# pane-width=2000
+# pane-height=1500
