--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
 		<launch4j.version>1.7.26</launch4j.version>
 		<launch4j.starterName>Filius.exe</launch4j.starterName>
 		<commons-lang3.version>3.3.2</commons-lang3.version>
-		<commons-io.version>2.4</commons-io.version>
 	</properties>
 	<packaging>jar</packaging>
 
@@ -93,7 +92,7 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>${commons-io.version}</version>
+			<version>2.8.0</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-httpclient</groupId>
@@ -149,6 +148,13 @@
 									<directory>src/info</directory>
 									<includes>
 										<include>**/*</include>
+									</includes>
+								</resource>
+								<resource>
+									<directory>${basedir}</directory>
+									<includes>
+										<include>*.md</include>
+										<include>*.txt</include>
 									</includes>
 								</resource>
 								<resource>
@@ -330,7 +336,7 @@
 								<configuration>
 									<target>
 										<gzip destfile="${project.build.directory}/changelog.gz"
-											src="${project.basedir}/src/info/Changelog.md" />
+											src="${project.basedir}/Changelog.md" />
 									</target>
 								</configuration>
 								<goals>
@@ -415,6 +421,16 @@
 											<src>${project.build.directory}/changelog.gz</src>
 											<type>file</type>
 											<dst>/usr/share/doc/filius/changelog.gz</dst>
+										</data>
+										<data>
+											<src>${project.build.directory}/Changelog.md</src>
+											<type>file</type>
+											<dst>/usr/share/filius/Changelog.md</dst>
+										</data>
+										<data>
+											<src>${project.build.directory}/Readme.md</src>
+											<type>file</type>
+											<dst>/usr/share/filius/Readme.md</dst>
 										</data>
 										<data>
 											<src>${project.basedir}/src/info</src>
