--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<publisher>Stefan Freischlad</publisher>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junit.version>4.10</junit.version>
-		<mockito.version>1.9.0</mockito.version>
+		<mockito.version>3.6.28</mockito.version>
 		<fest.version>1.4</fest.version>
 		<htmlparser.version>1.6</htmlparser.version>
 		<jna.version>3.0.9</jna.version>
@@ -61,7 +61,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
+			<artifactId>mockito-core</artifactId>
 			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
