--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,9 @@
 version: 1.10.4-{build}
 image: Visual Studio 2019
-init:
-- cmd: >-
-    SET JAVA_HOME=C:\Program Files\Java\jdk13
-
-    SET PATH=%JAVA_HOME%\bin;%PATH%
-
-    SET JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF8
-cache: C:\Users\appveyor\.m2
+environment:
+  JAVA_HOME: C:\Program Files\Java\jdk13
+  PATH: '%JAVA_HOME%\bin;%PATH%'
+  JAVA_TOOL_OPTIONS: -Dfile.encoding=UTF8
 build_script:
 - cmd: >-
     echo Source encoding defined with: JAVA_TOOL_OPTIONS=%JAVA_TOOL_OPTIONS%
