refactor IcmpPaket and IPPaket

--- a/src/main/resources/config/filius.ini
+++ b/src/main/resources/config/filius.ini
@@ -25,8 +25,9 @@
 # - ping will be sent 20 times instead of 4 times
 # posix-behaviour=1
 
-# Use the old message dialog to observe data exchange
-# old-exchange-dialog=0
+# Use the old message dialog to observe data exchange. It is recommended to use the new dialog!
+# Default behavior is to use the old exchange dialog (value 1).
+old-exchange-dialog=0
 
 # How the desktop windows in action mode are organized on the screen.
 # - The next window is added to the right of the previously opened window (arranged row by row): mode "row"
