update/extend debian package info (especially copyright/license)

--- a/src/deb/control/control
+++ b/src/deb/control/control
@@ -8,3 +8,4 @@ Maintainer: Stefan Freischlad <kontakt@lernsoftware-filius.de>
 Description: Lernsoftware zu Rechnernetzen
  Entdeckendes Lernen mit Filius durch Simulation von Rechnernetzen
 Distribution: production
+Homepage: https://www.lernsoftware-filius.de
