--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,11 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>de.skuzzle</groupId>
+			<artifactId>semantic-version</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 
 	</dependencies>
 
@@ -318,7 +322,7 @@
 		</profile>
 		<profile>
 			<id>windows-with-jre</id>
-			<!-- use only with windows profile!  -->
+			<!-- use only with windows profile! -->
 			<build>
 				<plugins>
 					<plugin>
