--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
 			<version>3.1</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
 			<groupId>de.skuzzle</groupId>
 			<artifactId>semantic-version</artifactId>
 			<version>2.1.0</version>
@@ -440,7 +445,7 @@
 											</paths>
 										</data>
 										<data>
-											<src>${project.basedir}/src/scripts/Filius.sh</src>
+											<src>${project.basedir}/src/scripts/filius.sh</src>
 											<type>file</type>
 											<dst>usr/share/filius/filius.sh</dst>
 											<mapper>
