--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-version: $(APPVEYOR_REPO_TAG_NAME)-{build}
+version: '{build}'
 image: Visual Studio 2019
 environment:
   JAVA_HOME: C:\Program Files\Java\jdk13
