re-factor establish connections re-factor gateway

--- a/src/main/resources/config/filius.ini
+++ b/src/main/resources/config/filius.ini
@@ -51,3 +51,6 @@ old-exchange-dialog=0
 # Default is (width x height): 2000 x 1500
 # pane-width=2000
 # pane-height=1500
+
+# If the hardware component Gateway is available.
+# gateway=1
