--- a/src/main/resources/config/filius.ini
+++ b/src/main/resources/config/filius.ini
@@ -52,5 +52,5 @@ old-exchange-dialog=0
 # pane-width=2000
 # pane-height=1500
 
-# If the hardware component Gateway is available.
+# If the hardware component NAT Gateway is available.
 # gateway=1
