- rename NAT Gateway to Home Router - enable home router by default - design improvement sidebar

--- a/src/main/resources/config/filius.ini
+++ b/src/main/resources/config/filius.ini
@@ -52,5 +52,5 @@ old-exchange-dialog=0
 # pane-width=2000
 # pane-height=1500
 
-# If the hardware component NAT Gateway is available.
-# gateway=1
+# If the hardware component NAT Gateway / Home Router is available.
+# gateway=0
