--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,9 @@
 version: '{build}'
+branches:
+  only:
+    - master
+skip_non_tags: true
+
 image: Visual Studio 2019
 environment:
   JAVA_HOME: C:\Program Files\Java\jdk13
