--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ version: '{build}'
 branches:
   only:
     - master
-skip_non_tags: true
+#skip_non_tags: true
 
 image: Visual Studio 2019
 environment:
