--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 version: '{build}'
-branches:
-  only:
-    - master
+#branches:
+#  only:
+#    - master
 #skip_non_tags: true
 
 image: Visual Studio 2019
