--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,6 @@
 version: '{build}'
-#branches:
-#  only:
-#    - master
-#skip_non_tags: true
+
+skip_non_tags: true
 
 image: Visual Studio 2019
 environment:
