prepare branch for italian version

--- a/src/main/resources/config/filius.ini
+++ b/src/main/resources/config/filius.ini
@@ -6,6 +6,7 @@
 # locale=de_DE
 # locale=en_GB
 # locale=fr_FR
+locale=it_IT
 
 # Increase accepted maximum round-trip-time for TCP if your hardware
 # provides low performance. Accepted values are between 1 (default) 
