--- a/src/deb/control/control
+++ b/src/deb/control/control
@@ -3,7 +3,8 @@ Version: [[version]]
 Section: misc
 Priority: optional
 Architecture: all
-Recommends: jdk (>= 1.8)
+Recommends: default-jdk
+Depends: default-jdk | default-jre, desktop-file-utils
 Maintainer: Stefan Freischlad <kontakt@lernsoftware-filius.de>
 Description: Lernsoftware zu Rechnernetzen
  Entdeckendes Lernen mit Filius durch Simulation von Rechnernetzen
