--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,6 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>filius</groupId>
 	<artifactId>filius</artifactId>
 	<version>2.3.0</version>
@@ -19,12 +18,11 @@
 		<java.version>1.8</java.version>
 		<execJre.version>1.8.0</execJre.version>
 		<mavenJar.version>2.4</mavenJar.version>
-		<launch4j.version>3.50</launch4j.version>
+		<launch4j.version>2.3.2</launch4j.version>
 		<launch4j.starterName>Filius.exe</launch4j.starterName>
 		<commons-lang3.version>3.12.0</commons-lang3.version>
 	</properties>
 	<packaging>jar</packaging>
-
 	<name>Filius</name>
 	<description>Lernsoftware zu Rechnernetzen</description>
 	<url>https://www.lernsoftware-filius.de</url>
@@ -34,7 +32,6 @@
 			<url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
 		</license>
 	</licenses>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
@@ -51,13 +48,11 @@
 			<artifactId>batik-codec</artifactId>
 			<version>1.12</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.itextpdf</groupId>
 			<artifactId>itextpdf</artifactId>
 			<version>5.5.13.1</version>
 		</dependency>
-
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -76,13 +71,11 @@
 			<version>${fest.version}</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.htmlparser</groupId>
 			<artifactId>htmlparser</artifactId>
 			<version>${htmlparser.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
@@ -108,7 +101,6 @@
 			<artifactId>semantic-version</artifactId>
 			<version>2.1.0</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -120,7 +112,6 @@
 			<version>1.2.3</version>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<finalName>filius</finalName>
 		<resources>
@@ -140,7 +131,6 @@
 				</includes>
 			</resource>
 		</resources>
-
 		<plugins>
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
@@ -218,7 +208,6 @@
 					</excludes>
 				</configuration>
 			</plugin>
-
 			<plugin>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
@@ -246,8 +235,8 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.3.1</version>
 				<configuration>
-				<author>false</author>
-				<failOnError>false</failOnError>
+					<author>false</author>
+					<failOnError>false</failOnError>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -260,7 +249,8 @@
 				<version>3.1.1</version>
 				<reportSets>
 					<reportSet>
-						<reports><!-- select reports -->
+						<reports>
+							<!-- select reports -->
 							<report>dependencies</report>
 							<report>licenses</report>
 						</reports>
@@ -279,10 +269,9 @@
 			</activation>
 			<build>
 				<plugins>
-
 					<!-- Create Filius Executable for Windows -->
 					<plugin>
-						<groupId>org.bidib.com.akathist.maven.plugins.launch4j</groupId>
+						<groupId>com.akathist.maven.plugins.launch4j</groupId>
 						<artifactId>launch4j-maven-plugin</artifactId>
 						<version>${launch4j.version}</version>
 						<executions>
@@ -328,7 +317,6 @@
 							</execution>
 						</executions>
 					</plugin>
-
 					<!-- Create a Zip-Archive for Platform Independent Delivery -->
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -348,7 +336,6 @@
 							</execution>
 						</executions>
 					</plugin>
-
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>exec-maven-plugin</artifactId>
@@ -409,7 +396,6 @@
 			</activation>
 			<build>
 				<plugins>
-
 					<plugin>
 						<artifactId>maven-antrun-plugin</artifactId>
 						<version>1.7</version>
@@ -428,7 +414,6 @@
 							</execution>
 						</executions>
 					</plugin>
-
 					<!-- Create Debian Package (used for Ubuntu Platform) -->
 					<plugin>
 						<artifactId>jdeb</artifactId>
