Correct filius.ini, closes issue #89

--- a/src/main/resources/config/filius.ini
+++ b/src/main/resources/config/filius.ini
@@ -21,8 +21,8 @@
 # native-look-n-feel=1
 
 # Set whether command line tools behaviour such as ping should
-# behave similiar to linux tools:
-# - ping will be sent 20 times instead of 4 times
+# behave more similar to linux tools:
+# - ping will be sent 10 times instead of 4 times
 # posix-behaviour=1
 
 # Use the old message dialog to observe data exchange. It is recommended to use the new dialog!
